# options-rl-clstm-ppo

./: .env  .env.example  .gitignore  README.md  pyproject.toml
apps/: backfill_alpaca.py  eval_latest.py  evaluate.py  plot_training.py  run.py  simulate_options_from_spy.py  train_cli.py
checkpoints/live/: latest.txt
checkpoints/live/sim_20251106_083627/: sim_ep00098.pt  sim_ep00099.pt  sim_ep00100.pt
checkpoints/live/sim_20251106_092011/: sim_ep00098.pt  sim_ep00099.pt  sim_ep00100.pt
checkpoints/local/: latest.txt
checkpoints/local/sim_20251106_014739/: sim_ep00001.pt  sim_ep00002.pt  sim_ep00003.pt
checkpoints/local/sim_20251106_015921/: sim_ep00001.pt  sim_ep00002.pt  sim_ep00003.pt
checkpoints/local/sim_20251106_020122/: sim_ep00001.pt  sim_ep00002.pt  sim_ep00003.pt
checkpoints/local/sim_20251106_025920/: sim_ep00001.pt  sim_ep00002.pt  sim_ep00003.pt
configs/: alpaca_spy.yaml  h200_train.yaml  local_debug.yaml  sim_spy_debug.yaml  synth_spy.yaml  train_synth.yaml
data/alpaca/SPY/: SPY_bars_03000_03149.parquet  SPY_bars_03150_03299.parquet  SPY_bars_03300_03449.parquet  SPY_bars_03450_03599.parquet  SPY_bars_03600_03749.parquet  SPY_bars_03750_03899.parquet  SPY_bars_03900_04049.parquet  SPY_bars_04050_04199.parquet  SPY_bars_04200_04349.parquet  SPY_bars_04350_04499.parquet  SPY_bars_04500_04649.parquet  SPY_bars_04650_04799.parquet  SPY_bars_04800_04949.parquet  SPY_bars_04950_05099.parquet  SPY_bars_06000_06149.parquet  SPY_bars_06150_06299.parquet  SPY_bars_06300_06449.parquet  SPY_bars_06450_06599.parquet  SPY_bars_06600_06749.parquet  SPY_bars_06750_06899.parquet  SPY_bars_06900_07049.parquet  SPY_bars_07050_07199.parquet  SPY_bars_07200_07349.parquet  SPY_bars_07350_07499.parquet  SPY_bars_07500_07649.parquet  SPY_bars_07650_07799.parquet  SPY_bars_07800_07949.parquet  SPY_bars_07950_08099.parquet  SPY_bars_08100_08249.parquet  SPY_bars_08250_08399.parquet  SPY_bars_08400_08549.parquet  SPY_bars_08550_08699.parquet  SPY_bars_08700_08849.parquet  SPY_bars_08850_08999.parquet  SPY_chain_2024-08-01_2024-11-01.parquet  SPY_underlying_2024-08-01_2024-11-01.parquet
docs/: commands.py
logs/: index.csv
logs/live/: latest.txt
logs/live/20251106_083627/: meta.json  train.csv
logs/live/20251106_092011/: eval.json  meta.json  train.csv
logs/local/: latest.txt
logs/local/20251106_014739/: meta.json  train.csv
logs/local/20251106_015921/: meta.json
logs/local/20251106_020122/: eval.json  meta.json
logs/local/20251106_023109/: meta.json
logs/local/20251106_023132/: meta.json
logs/local/20251106_024358/: meta.json
logs/local/20251106_024520/: meta.json
src/trader/: constants.py
src/trader/env/: options_env.py  (+1 more)
src/trading_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_env_step.py  test_train_smoke.py
(+24 files in other folders)
