[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-rl"
version = "0.1.0"
description = "CLSTM-PPO options trading scaffold (paper-faithful + options adaptations)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "pandas>=2.1",
  "gymnasium>=0.29",
  "scipy>=1.11",
  "tyro>=0.7.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "requests>=2.31",
  "pyarrow>=15.0",
  "python-dateutil>=2.8.2",
  "pytz>=2024.1",
  "tenacity>=8.2.3",
  "python-dotenv>=1.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
