[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-rl"
version = "0.1.0"
description = "CLSTM-PPO options trading scaffold (paper-faithful + options adaptations)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Core + scientific stack
  "torch>=2.2",
  "numpy>=1.24",
  "pandas>=2.1",
  "scipy>=1.11",
  "pyarrow>=15.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "python-dateutil>=2.8.2",
  "pytz>=2024.1",
  "tenacity>=8.2.3",
  "python-dotenv>=1.0.1",
  "tqdm>=4.66",

  # RL / env
  "gymnasium>=0.29",

  # Market / data
  "alpaca-py>=0.13.0",
  "pandas-market-calendars>=4.0.0",

  # Visualization / monitoring
  "tensorboard>=2.16",

  # Dev utilities
  "black>=24.3.0",
  "ruff>=0.5.0",
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
